tests/snapshots/s6_peers_drill__drill_view_outlier_batch_commitment.snap
---
source: tests/s6_peers_drill.rs
expression: view
---
PeerDrillView {
    peer_overlay: "out",
    bin: Some(
        6,
    ),
    balance: Ok(
        "+BZZ 0.0000",
    ),
    ping: Ok(
        "8ms",
    ),
    settlement_received: Ok(
        "—",
    ),
    settlement_sent: Ok(
        "—",
    ),
    last_received_cheque: Ok(
        None,
    ),
    last_sent_cheque: Ok(
        None,
    ),
    storage_radius: Ok(
        "6",
    ),
    reserve_size: Ok(
        "80 000",
    ),
    pullsync_rate: Ok(
        "1.20 chunks/s",
    ),
    batch_commitment: Ok(
        BatchCommitmentCell {
            formatted: "50 000 000 000",
            outlier: true,
        },
    ),
}
