tests/snapshots/s6_peers_drill__drill_view_partial_failure.snap
---
source: tests/s6_peers_drill.rs
expression: view
---
PeerDrillView {
    peer_overlay: "xxx",
    bin: None,
    balance: Ok(
        "+BZZ 0.0000",
    ),
    ping: Ok(
        "12ms",
    ),
    settlement_received: Ok(
        "—",
    ),
    settlement_sent: Ok(
        "—",
    ),
    last_received_cheque: Err(
        "Response { status: 404, status_text: \"404 Not Found\" }",
    ),
    last_sent_cheque: Err(
        "Response { status: 404, status_text: \"404 Not Found\" }",
    ),
    storage_radius: Err(
        "(no /status/peers row for this overlay)",
    ),
    reserve_size: Err(
        "(no /status/peers row for this overlay)",
    ),
    pullsync_rate: Err(
        "(no /status/peers row for this overlay)",
    ),
    batch_commitment: Err(
        "(no /status/peers row for this overlay)",
    ),
}
